syntax = "proto3";

package sreportal.v1;

import "google/protobuf/timestamp.proto";

// DNSService provides DNS record management and discovery
service DNSService {
  // ListFQDNs returns all aggregated FQDNs from DNS resources
  rpc ListFQDNs(ListFQDNsRequest) returns (ListFQDNsResponse);

  // StreamFQDNs streams FQDN updates in real-time
  rpc StreamFQDNs(StreamFQDNsRequest) returns (stream StreamFQDNsResponse);
}

// ListFQDNsRequest is the request for listing FQDNs
message ListFQDNsRequest {
  // namespace filters FQDNs by namespace (empty for all namespaces)
  string namespace = 1;

  // source filters FQDNs by source (empty for all sources)
  string source = 2;

  // search filters FQDNs by name substring
  string search = 3;

  // portal filters FQDNs by portal name (empty for all portals)
  string portal = 4;
}

// ListFQDNsResponse contains the list of FQDNs
message ListFQDNsResponse {
  // fqdns is the list of aggregated FQDNs
  repeated FQDN fqdns = 1;
}

// StreamFQDNsRequest is the request for streaming FQDN updates
message StreamFQDNsRequest {
  // namespace filters updates by namespace (empty for all namespaces)
  string namespace = 1;
}

// StreamFQDNsResponse represents an update to an FQDN
message StreamFQDNsResponse {
  // type is the type of update
  UpdateType type = 1;

  // fqdn is the FQDN that was updated
  FQDN fqdn = 2;
}

// UpdateType represents the type of update
enum UpdateType {
  UPDATE_TYPE_UNSPECIFIED = 0;
  UPDATE_TYPE_ADDED = 1;
  UPDATE_TYPE_MODIFIED = 2;
  UPDATE_TYPE_DELETED = 3;
}

// FQDN represents a fully qualified domain name with metadata
message FQDN {
  // name is the fully qualified domain name
  string name = 1;

  // source indicates where this FQDN came from (manual or external-dns)
  string source = 2;

  // group is the name of the group this FQDN belongs to
  string group = 3;

  // description is an optional human-readable description
  string description = 4;

  // record_type is the DNS record type (A, AAAA, CNAME, etc.)
  string record_type = 5;

  // targets is the list of target addresses for this FQDN
  repeated string targets = 6;

  // last_seen is the timestamp when this FQDN was last observed
  google.protobuf.Timestamp last_seen = 7;

  // dns_resource_name is the name of the DNS resource this FQDN belongs to
  string dns_resource_name = 8;

  // dns_resource_namespace is the namespace of the DNS resource
  string dns_resource_namespace = 9;
}
